# maigret

./: .dockerignore  .gitignore  .readthedocs.yaml  BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_DETAILS.md  Dockerfile  Fgg  IMPLEMENTATION_STEPS.md  Installer.bat  LICENSE  MANIFEST.in  MODERNIZATION_PLAN.md  MODERNIZED_USAGE.md  Makefile  OPTIMIZATION.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  README.md  README.zh-CN.md  README_EXTRA.md  TROUBLESHOOTING.md  app.py  benchmark.py  cloudshell-tutorial.md  cookies.txt  data.json  example.ipynb  format.sh  lint.sh  maigret.py  maigret_benchmark.py  mini_benchmark.py  minimal_benchmark.py  opensuse.txt  pyproject.toml  pytest.ini  refactor.patch  (+14 more)
.githooks/: pre-commit
.github/: FUNDING.yml  data.json
LLM/: site-checks-guide.md  site-checks-playbook.md
docs/: INVALID_TELEGRAM_PR_CLOSER.md  Makefile  requirements.txt
maigret/: __init__.py  __main__.py  __version__.py  activation.py  ai.py  checking.py  db_updater.py  deps.py  error_detection.py  errors.py  executors.py  extractors.py  http_checker_wrapper.py  maigret.py  modernized_checking.py  modernized_maigret.py  notify.py  optimized_checker.py  optimized_executor.py  optimized_http.py  optimized_maigret.py  optimized_sites.py  permutator.py  report.py  result.py  settings.py  sites.py  submit.py  types.py  utils.py
maigret_sites_example/: example_site.py  load_extras.py  mastodon_api_checker.py  mastodon_api_resolver.py  mastodon_resolver.py  newsite.py  shodan_checker.py  socid_extractor.py  tiktok_checker.py
pyinstaller/: maigret.spec  maigret_standalone.py  maigret_standalone.spec  requirements.txt
sherlock/: sherlock.py
static/: recursive_search.md  report_alexaimephotographycars.html
templates/: base.html  results.html
tests/: conftest.py  db.json  local.json  test_activation.py  test_checking.py  test_cli.py  test_close_invalid_telegram_prs.py  test_cloudflare_webgate.py  test_country_tags.py  test_data.py  test_db_updater.py  test_deps.py  test_error_detection.py  test_errors.py  test_example_site.py  test_executors.py  test_extractors.py  test_generate_changelog.py  test_idempotent_writes.py  test_keyword_filtering.py  test_maigret.py  test_mastodon_api_checker.py  test_mastodon_resolver.py  test_newsite.py  test_notebook.py  test_notify.py  test_permutator.py  test_report.py  test_sanitize_username.py  test_settings.py  test_shodan_checker.py  test_shodan_integration.py  test_sites.py  test_standalone_wrapper.py  test_submit.py  test_twitter.py  test_utils.py  (+1 more)
(+82 files in other folders)
